# Datalens_Project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: backend.yml
backend/: .env.example  mypy.ini  pyrightconfig.json  requirements.in  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: sqlite.py
backend/app/schemas/: responses.py
backend/app/services/: data_loader.py  insight_engine.py  ml_advisor.py  ml_trainer.py  orchestrator.py  stats_engine.py  visualization_engine.py
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BarNavigation.tsx  FilmGrain.tsx  FlowStack.tsx  GlitchWrapper.tsx  InsightCard.tsx  MLAdvisorCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: navigationLinks.ts
frontend/src/engine/: AnalyticsVisualBridge.ts  DepthTypography.tsx  GlitchEngine.ts  GradientEngine.ts  MultiverseEngine.ts  MultiverseProvider.tsx  MultiverseStateManager.ts  ThemeController.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: env.ts  plotlyTheme.ts  utils.ts
frontend/src/routes/: AppRoutes.tsx
frontend/src/services/: analysisService.ts  api.ts  auth.ts  authApi.ts  httpClient.ts  sessionData.ts
frontend/src/store/: analysisStore.ts  (+2 more)
sample-data/: eda_test_synthetic.csv
(+104 files in other folders)
